JTA - Flujos y detalles

--- a/RocketProcess/Client/wwwroot/index.html
+++ b/RocketProcess/Client/wwwroot/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-cl">
 
 <head>
     <meta charset="utf-8" />
@@ -9,6 +9,7 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="RocketProcess.Client.styles.css" rel="stylesheet" />
+    <link rel="shortcut icon" type="image/png" href="/launch.png" />
 
     <!--MudBlazor-->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
